--- a/SQLInfo.Web/Web.config
+++ b/SQLInfo.Web/Web.config
@@ -9,7 +9,11 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="SQLite" value="/data/sqlinfo.db"/>
   </appSettings>
+  <connectionStrings>
+    <add name="SQLite" connectionString="datasource=/data/sqlinfo.db" providerName="System.Data.SQLite"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1"/>
     <httpRuntime targetFramework="4.5.1"/>
