--- a/SQLInfo.Web/Web.config
+++ b/SQLInfo.Web/Web.config
@@ -11,8 +11,16 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="SQLite" value="/data/sqlinfo.db"/>
   </appSettings>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite"/>
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".Net Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+    </DbProviderFactories>
+  </system.data>
   <connectionStrings>
-    <add name="SQLite" connectionString="datasource=/data/sqlinfo.db" providerName="System.Data.SQLite"/>
+    
+    <add name="SQLInfo" connectionString="/data/sqlinfo.db" providerName="System.Data.SQLite"/>
+    
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1"/>
