--- a/SQLInfo/packages.config
+++ b/SQLInfo/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NPoco" version="2.6.88" targetFramework="net451" />
+  <package id="sqlite-net" version="1.0.8" targetFramework="net451" />
   <package id="System.Data.SQLite.Core" version="1.0.96.0" targetFramework="net451" />
 </packages>
