--- a/SQLInfo/SQLInfo.csproj
+++ b/SQLInfo/SQLInfo.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Business\DatabaseBusinessLogic.cs" />
+    <Compile Include="Common\DbType.cs" />
     <Compile Include="Data\BaseData.cs" />
     <Compile Include="Data\DatabaseData.cs" />
     <Compile Include="Model\T_Database.cs" />
