--- a/SQLInfo/SQLInfo.csproj
+++ b/SQLInfo/SQLInfo.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLite.cs" />
     <Compile Include="SQLiteAsync.cs" />
+    <Compile Include="ViewModel\ParentTreeNode.cs" />
+    <Compile Include="ViewModel\TreeNode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
