--- a/SQLInfo.Web/SQLInfo.Web.csproj
+++ b/SQLInfo.Web/SQLInfo.Web.csproj
@@ -131,6 +131,7 @@
     <Content Include="Views\web.config" />
     <Content Include="Views\Shared\_BaseLayoutPage.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\TableDetail.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
