--- a/SQLInfo.Web/SQLInfo.Web.csproj
+++ b/SQLInfo.Web/SQLInfo.Web.csproj
@@ -116,6 +116,7 @@
     <Content Include="Styles\img\loading.gif" />
     <Content Include="Styles\img\zTreeStandard.gif" />
     <Content Include="Styles\img\zTreeStandard.png" />
+    <Content Include="Styles\styles.css" />
     <Content Include="Styles\zTreeStyle.css" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -125,6 +126,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\UserLoginModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -132,6 +134,9 @@
     <Content Include="Views\Shared\_BaseLayoutPage.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\TableDetail.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\AdminIndex.cshtml" />
+    <Content Include="Views\Home\AddServer.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -147,7 +152,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
